--- a/components/parts/Button.module.scss
+++ b/components/parts/Button.module.scss
@@ -95,7 +95,7 @@
   z-index: 1000;
   width: 130%;
   padding: 8px;
-  font-family: "Mint Grotesk Medium", "Noto Sans JP", sans-serif;
+  font-family: "Mint Grotesk Bold", "Noto Sans JP", sans-serif;
   font-size: 10px;
   font-weight: 700;
   color: var(--bb-beige);
