--- a/components/control2/parts/IconButton.module.scss
+++ b/components/control2/parts/IconButton.module.scss
@@ -85,7 +85,7 @@
   left: 50%;
   z-index: 1000;
   padding: 8px;
-  font-family: "Mint Grotesk Medium", "Noto Sans JP", sans-serif;
+  font-family: "Mint Grotesk Bold", "Noto Sans JP", sans-serif;
   font-size: 10px;
   font-weight: 700;
   color: var(--bb-beige);
