--- a/components/parts/TextboxWithCopy.module.scss
+++ b/components/parts/TextboxWithCopy.module.scss
@@ -22,7 +22,7 @@
   left: 0;
   width: 48px;
   height: 30px;
-  font-family: "Mint Grotesk Medium", "Noto Sans JP", sans-serif;
+  font-family: "Mint Grotesk Bold", "Noto Sans JP", sans-serif;
   font-size: 12px;
   font-weight: 700;
   color: var(--bb-black);
