--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -58,6 +58,7 @@ body {
   font-size: 62.5%;
   color: var(--black);
   -webkit-font-smoothing: antialiased;
+  font-synthesis: none;
 }
 
 a {
@@ -74,7 +75,7 @@ html {
 }
 
 h2 {
-  font-family: "Mint Grotesk Bold", "Noto Sans JP", sans-serif;
+  font-family: "Mint Grotesk ExtraBold", "Noto Sans JP", sans-serif;
   font-size: 4.8rem;
   font-weight: 900;
 
@@ -84,7 +85,7 @@ h2 {
 }
 
 h3 {
-  font-family: "Mint Grotesk Bold", "Noto Sans JP", sans-serif;
+  font-family: "Mint Grotesk ExtraBold", "Noto Sans JP", sans-serif;
   font-size: 3.2rem;
   font-weight: 900;
 
@@ -94,7 +95,7 @@ h3 {
 }
 
 h4 {
-  font-family: "Mint Grotesk Medium", "Noto Sans JP", sans-serif;
+  font-family: "Mint Grotesk Bold", "Noto Sans JP", sans-serif;
   font-size: 1.5rem;
   font-weight: 700;
 
@@ -104,7 +105,7 @@ h4 {
 }
 
 h5 {
-  font-family: "Mint Grotesk Bold", "Noto Sans JP", sans-serif;
+  font-family: "Mint Grotesk ExtraBold", "Noto Sans JP", sans-serif;
   font-size: 2.4rem;
   font-weight: 900;
 
@@ -185,6 +186,7 @@ span {
     code {
       padding: 0.25rem 0.5rem;
       font-size: 1.3rem;
+      word-break: break-all;
       background-color: var(--bb-light);
       border-radius: 5px;
     }
