--- a/pages/help.module.scss
+++ b/pages/help.module.scss
@@ -30,6 +30,10 @@
       box-shadow: 0 3px 10px rgb(0 0 0 / 15%);
     }
   }
+
+  @media (max-width: 520px) {
+    padding: 1.5rem 2rem;
+  }
 }
 
 .helpbox {
@@ -74,5 +78,30 @@
 
   p {
     margin-top: 2rem;
+  }
+
+  @media (max-width: 520px) {
+    padding: 1.5rem 2rem;
+
+    li {
+      padding-top: 1.5rem;
+      padding-bottom: 1.5rem;
+
+      ul {
+        padding-top: 1.5rem;
+      }
+    }
+
+    p {
+      margin-top: 1.5rem;
+    }
+  }
+
+  .buyme {
+    height: 3rem;
+    margin-top: 1.5rem;
+    margin-bottom: 0;
+    border: none;
+    border-radius: 0;
   }
 }
