--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -52,6 +52,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
   font-family: "Mint Grotesk Regular", "Noto Sans JP", -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -74,10 +75,36 @@ html {
   background-color: rgb(0 0 0 / 0%);
 }
 
+h1 {
+  margin-top: 10rem;
+  font-family: "Mint Grotesk ExtraBold", "Noto Sans JP", sans-serif;
+  font-size: 5.4rem;
+  font-weight: 900;
+  line-height: 1.2;
+
+  @media (max-width: 960px) {
+    margin-top: 8rem;
+    font-size: 4.8rem;
+  }
+
+  @media (max-width: 670px) {
+    font-size: 3.5rem;
+  }
+
+  @media (max-width: 520px) {
+    margin-top: 5rem;
+    font-size: 2.7rem;
+  }
+}
+
 h2 {
   font-family: "Mint Grotesk ExtraBold", "Noto Sans JP", sans-serif;
   font-size: 4.8rem;
   font-weight: 900;
+
+  @media (max-width: 960px) {
+    font-size: 4.2rem;
+  }
 
   @media (max-width: 520px) {
     font-size: 2.7rem;
@@ -88,6 +115,10 @@ h3 {
   font-family: "Mint Grotesk ExtraBold", "Noto Sans JP", sans-serif;
   font-size: 3.2rem;
   font-weight: 900;
+
+  @media (max-width: 960px) {
+    font-size: 2.7rem;
+  }
 
   @media (max-width: 520px) {
     font-size: 1.8rem;
