--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -13,7 +13,8 @@
   }
 
   .createLink {
-    padding: 10px 15px;
+    display: inline-block;
+    padding: 8px 15px;
     font-family: "Mint Grotesk Bold", "Noto Sans JP", sans-serif;
     font-size: 14px;
     font-weight: 700;
@@ -67,12 +68,27 @@
   margin-left: -48px;
   background-color: var(--bb-beige);
 
+  h2 {
+    text-align: center;
+  }
+
   h3 {
     padding: 0;
-    margin-top: 0;
+    margin-top: 10px;
     margin-bottom: 0;
+    font-family: "Mint Grotesk Bold", "Noto Sans JP", sans-serif;
     font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 1.2;
     border: 0;
+
+    @media (max-width: 960px) {
+      font-size: 2rem;
+    }
+  }
+
+  p {
+    font-size: 14px;
   }
 
   @media (max-width: 520px) {
@@ -89,7 +105,7 @@
   color: white;
   background-color: var(--bb-black);
 
-  h3 {
+  h2 {
     padding: 0;
     margin-top: 50px;
     margin-bottom: 0;
@@ -97,12 +113,92 @@
     border: 0;
   }
 
-  h2 {
-    padding: 0;
-    margin-top: 50px;
-    margin-bottom: 0;
-    text-align: center;
-    border: 0;
+  blockquote {
+    position: relative;
+    padding: 1.5rem 2rem;
+    margin-top: 3rem;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 30px;
+      height: 30px;
+      content: "";
+      border-top: 1px solid var(--bb-gray);
+      border-left: 1px solid var(--bb-gray);
+    }
+
+    &::after {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      width: 30px;
+      height: 30px;
+      content: "";
+      border-right: 1px solid var(--bb-gray);
+      border-bottom: 1px solid var(--bb-gray);
+    }
+
+    p {
+      margin-top: 0;
+    }
+
+    @media (max-width: 960px) {
+      p {
+        font-size: 1.4rem;
+      }
+    }
+  }
+
+  .mainreview {
+    margin-bottom: 100px;
+
+    h3 {
+      padding: 0;
+      margin-top: 0;
+      margin-bottom: 0;
+      text-align: center;
+      border: 0;
+    }
+
+    p {
+      margin-top: 20px;
+      text-align: center;
+    }
+  }
+
+  .reflex {
+    display: flex;
+    column-gap: 15px;
+    align-items: center;
+
+    &center {
+      @extend .reflex;
+
+      justify-content: center;
+      margin-top: 30px;
+    }
+
+    &__icon {
+      border-radius: 100%;
+    }
+
+    &__name {
+      h4 {
+        padding: 0;
+        margin: 0;
+      }
+
+      p {
+        margin-top: 0;
+      }
+
+      a {
+        margin-top: 0;
+        color: var(--bb-white);
+      }
+    }
   }
 
   .buyme {
@@ -126,6 +222,7 @@
   }
 
   .discord {
+    margin-top: 100px;
     text-align: center;
 
     p {
