--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -52,7 +52,6 @@ html,
 body {
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
   font-family: "Mint Grotesk Regular", "Noto Sans JP", -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -249,6 +248,9 @@ span {
 
 .markdown h2 {
   margin-bottom: 4rem;
+  @media (max-width: 520px) {
+    margin-bottom: 2rem;
+  }
 }
 
 .markdown h3 {
