simpleレイアウトのラウンドとセット情報の間の仕切りを変更

--- a/components/obs/score/Simple.scss
+++ b/components/obs/score/Simple.scss
@@ -95,7 +95,10 @@
     margin-right: 3px;
 
     &::after {
-      content: "—";
+      margin-left: 5px;
+      font-variation-settings: "wght" 500;
+      font-weight: 500;
+      content: "/";
     }
   }
 
