edit help and top image

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -18,7 +18,6 @@
   }
 
   video {
-    margin-top: 20px;
     margin-right: auto;
     margin-left: auto;
   }
@@ -26,6 +25,7 @@
   .createLink {
     display: inline-block;
     padding: 8px 15px;
+    margin-bottom: 20px;
     font-family: "Mint Grotesk Bold", "Noto Sans JP", sans-serif;
     font-size: 14px;
     font-weight: 700;
