--- a/pages/help.module.scss
+++ b/pages/help.module.scss
@@ -61,9 +61,24 @@
       }
     }
 
+    ol {
+      padding-top: 2rem;
+      margin-top: 0;
+
+      li {
+        padding: 0;
+        font-size: 1.4rem;
+        font-weight: 400;
+        line-height: 1.7;
+        list-style-type: decimal;
+        border: none;
+      }
+    }
+
     h4 {
       padding-top: 0;
       margin-top: 0;
+      margin-bottom: 2rem;
     }
 
     &:first-child {
@@ -103,5 +118,9 @@
     margin-bottom: 0;
     border: none;
     border-radius: 0;
+  }
+
+  .helpimage {
+    margin-top: 2rem;
   }
 }
