--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -220,6 +220,11 @@ span {
       background-color: var(--bb-light);
       border-radius: 5px;
     }
+
+    strong {
+      font-family: "Mint Grotesk Bold", "Noto Sans JP", sans-serif;
+      font-weight: 700;
+    }
   }
 
   ol {
