--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,7 +32,7 @@
   font-family: "Poppins Variable";
   font-style: normal;
   font-weight: 100 900;
-  src: url("/fonts/Poppins Variable.woff2") format("woff2");
+  src: url("/fonts/Poppins-Variable.woff2") format("woff2");
   font-display: swap;
 }
 
