--- a/components/obs/bracket/BracketBox.module.scss
+++ b/components/obs/bracket/BracketBox.module.scss
@@ -43,7 +43,7 @@ $black: "Satoshi", "Noto Sans JP", sans-serif;
   position: absolute;
   display: flex;
   justify-content: space-between;
-  width: 295px;
+  width: 303px;
   height: 85px;
   padding-left: 11px;
 
@@ -65,7 +65,7 @@ $black: "Satoshi", "Noto Sans JP", sans-serif;
 
   font-size: 22px;
   line-height: 42px;
-  color: var(--bb-black);
+  color: var(--bb-white);
   letter-spacing: 1px;
 }
 
@@ -73,20 +73,21 @@ $black: "Satoshi", "Noto Sans JP", sans-serif;
   @include blackWeight;
 
   font-size: 22px;
-  line-height: 42px;
-  color: var(--bb-black);
+  line-height: 48px;
+  color: var(--bb-white);
   letter-spacing: 1px;
 }
 
 .score {
   @include boldWeight;
 
+  display: inline-block;
   width: 40px;
-  margin: 0;
-  font-size: 30px;
+  margin-top: -2px !important;
+  font-size: 32px;
   font-variant-numeric: tabular-nums;
-  line-height: 42px;
-  color: var(--bb-black);
+  line-height: 51px;
+  color: var(--bb-white);
   text-align: center;
 }
 
@@ -101,13 +102,13 @@ $black: "Satoshi", "Noto Sans JP", sans-serif;
 .other.winners {
   .player1 span,
   .player2 span {
-    color: var(--bb-black);
+    color: var(--bb-white);
   }
 }
 
 .other.grand {
   .player1 span {
-    color: var(--bb-black);
+    color: var(--bb-white);
   }
 
   .player2 span {
