--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,6 +28,16 @@
   src: url("/fonts/Mint-Grotesk-ExtraBold-V13.woff2");
 }
 
+@font-face {
+  font-family: "Mario Maker";
+  src: url("/fonts/Super-Mario-Maker.ttf");
+}
+
+@font-face {
+  font-family: "Nitalago Ruika5";
+  src: url("/fonts/NitalagoRuika-05M.TTF");
+}
+
 :root {
   --dark-gray: #111;
   --black: #202025;
