--- a/components/obs/next/base.scss
+++ b/components/obs/next/base.scss
@@ -1,8 +1,8 @@
 // フォントの設定
-$regular: "Satoshi", "Noto Sans JP", sans-serif;
-$medium: "Satoshi", "Noto Sans JP", sans-serif;
-$bold: "Satoshi", "Noto Sans JP", sans-serif;
-$black: "Satoshi", "Noto Sans JP", sans-serif;
+$regular: "FOT-ロダンNTLG Pro UB", "Satoshi", "Noto Sans JP", sans-serif;
+$medium: "FOT-ロダンNTLG Pro UB", "Satoshi", "Noto Sans JP", sans-serif;
+$bold: "FOT-ロダンNTLG Pro UB", "Satoshi", "Noto Sans JP", sans-serif;
+$black: "FOT-ロダンNTLG Pro UB", "Satoshi", "Noto Sans JP", sans-serif;
 
 // フォントの太さの設定（ライトウェイト）
 @mixin regularWeight {
