customized for beesmash

--- a/components/obs/score/Solid.scss
+++ b/components/obs/score/Solid.scss
@@ -2,41 +2,44 @@
 
 // 試合ステータス（Winners Semis, Best of 3など）の設定
 @mixin status {
-  @include blackWeight;
-
-  width: 240px;
+  width: 150px;
   margin: 0;
-  font-size: 19px;
-  font-style: italic;
+  font-family: Montserrat, sans-serif;
+  font-size: 21px;
+  font-weight: 600;
   line-height: 21px;
-  color: var(--status-color);
+  color: #fff;
   text-align: center;
-  letter-spacing: 1px;
+  letter-spacing: 0.04em;
 }
 
 .solid {
   // スコアの位置指定
   .score {
-    @include score;
-    @include blackWeight;
-
-    top: 45px;
-    width: 60px;
-    font-size: 40px;
+    position: absolute;
+    top: 7px;
+    width: 80px;
+    margin: 0;
+    font-family: Montserrat, sans-serif;
+    font-size: 36px;
+    font-weight: 800;
+    color: #3e362d;
+    text-align: center;
+    letter-spacing: -0.02em;
 
     &.p1 {
-      left: 770px;
+      left: 332px;
     }
 
     &.p2 {
-      right: 770px;
+      right: 332px;
     }
   }
 
   .player {
     position: absolute;
-    top: 60px;
-    width: 430px;
+    top: 20px;
+    width: 455px;
     height: 60px;
     margin: 0;
     text-align: center;
@@ -50,43 +53,43 @@
     }
 
     &.p1 {
-      left: 320px;
+      left: 410px;
     }
 
     &.p2 {
-      right: 320px;
+      right: 410px;
     }
 
     .team {
-      @include mediumWeight;
-
-      font-size: 29px;
-      line-height: 29px;
-      color: var(--player-color);
+      font-family: "Noto Sans JP", sans-serif;
+      font-size: 26px;
+      font-weight: 500;
+      line-height: 26px;
+      color: #3e362d;
       text-align: center;
-      letter-spacing: 1px;
+      letter-spacing: 0.04em;
     }
 
     .name {
-      @include blackWeight;
-
-      font-size: 29px;
-      line-height: 29px;
-      color: var(--player-color);
+      font-family: "Noto Sans JP", sans-serif;
+      font-size: 26px;
+      font-weight: 900;
+      line-height: 26px;
+      color: #3e362d;
       text-align: center;
-      letter-spacing: 1px;
+      letter-spacing: 0.04em;
     }
   }
 
   .box {
     position: absolute;
-    top: 44px;
-    left: 840px;
+    top: 0;
+    left: 885px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 240px;
-    height: 60px;
+    width: 150px;
+    height: 50px;
   }
 
   // 試合ステータスの位置設定
@@ -96,6 +99,8 @@
 
   .matchType {
     @include status;
+
+    display: none;
   }
 
   .cameraRight,
